--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -9,38 +9,38 @@
 }
 
 body{
-    font:400 14px Roboto, sans-serif;
+    font:400 16px Calibri, sans-serif;
     background:#bcbcc4;
     -webkit-font-smoothing: antialiased;
 }
 
 input,button,textarea{
-    font:400 18px Roboto, sans-serif;
-
+    font:400 16px Calibri, sans-serif;
 
 }
 
 button{
+    font:400 16px Calibri, sans-serif;
     cursor: pointer;
 }
 
+
+
 form input{
-    width: 100%;
-    height: 60px;
-    color: #333;
-    border: 1px solid #dcdce6;
-    border-radius: 8px;
-    padding:10px;
+    width: 80%;
+    height: 10px;
+    border-radius: 3px;
 }
 
 form textarea{
+    margin-top: 10px;
     width: 100%;
     resize: vertical;
     min-height: 140px;
     color: #333;
-    border: 1px solid #dcdce6;
-    border-radius: 8px;
-    padding:10px;
+    border: 1px solid #111111;
+    border-radius: 3px;
+    
     line-height: 24px;
 }
 
@@ -49,14 +49,26 @@ a{
    
 }
 
+.search{  
+    display: flex;
+}
 
+.search input{
+    margin-top: 80px;
+    height: 23px;
+    margin-left: 380px;
+}
+.link-pesquisa{
+    margin-top: 80px;
+    height: 23px;
+}
 
 .button{
     width: 100%;
     height: 60px;
-    background: #6a09a1;
+    background: #8f1570;
     border: 0;
-    border-radius: 8px;
+    border-radius: 5px;
     color: #FFF;
     font-weight: 700;
     margin-top: 16px;
@@ -74,6 +86,7 @@ a{
 }
 
 .back-link{
+    width: 50%;
     display: flex;
     align-items: center;
     margin-top: 40px;
