--- a/frontend/src/pages/Profile/styles.css
+++ b/frontend/src/pages/Profile/styles.css
@@ -34,12 +34,16 @@
     height: 60px;
     width: 60px;
     border-radius: 8px;
-    border: 1px solid #181717;
+    border: 1px solid transparent;
     background: transparent;
     margin-left: 16px;
     transition: border-color 0.3s;
 
 }
+
+
+
+
 
 .profile-container header button:hover{
     border-color: rgb(19, 18, 18);
@@ -49,7 +53,22 @@
 .profile-container h1{
     margin-top: 80px;
     margin-bottom: 24px;
+    width: 50%;
 
+}
+.profile-container h2{
+    margin-top: 80px;
+    position: absolute;
+    right: 0;
+    margin-right: 125px;
+   
+    height: 50px;
+    color: #333;
+   
+    border-radius: 8px;
+    padding:10px;
+    margin-bottom: 8px;
+    align-items: center;
 }
 
 .profile-container ul{
@@ -72,6 +91,7 @@
     right: 24px;
     top: 24px;
     border: 0;
+    border-radius: 6px;
 
 }
 
@@ -112,4 +132,21 @@
     line-height: 20px;
     transition: filter 0.2s;
 
+}
+
+.verMais{
+    margin-right: 30px;
+}
+.verMaisPesquisa{
+    margin-right: 0px;
+}
+
+.profile-container .pesquisa{
+    width: 30%;
+    
+    display: block;
+}
+
+.profile-container .pesquisa li{
+    margin-bottom: 10px;
 }
