--- a/frontend/src/pages/Detalhes/styles.css
+++ b/frontend/src/pages/Detalhes/styles.css
@@ -146,3 +146,24 @@
     margin-bottom: 8px;
 }
 
+.button1{
+   
+    background: #f3eff3;
+    border: 0;
+    border-radius: 8px;
+    color: rgb(139, 125, 125);
+    font-weight: 20;
+    display: inline-flex;
+    text-align: center;
+    font-size: 20px;
+    font-style: oblique;
+   
+    transition: filter 0.2s;
+ 
+    
+}
+
+.cliente {
+    margin-top: 10px;
+   
+}
