--- a/frontend/src/pages/Inicio/styles.css
+++ b/frontend/src/pages/Inicio/styles.css
@@ -96,9 +96,9 @@
 
 .inicio-container header button{
     height: 60px;
-    width: 60px;
+    width: 120px;
     border-radius: 8px;
-    border: 1px solid #181717;
+    border: none;
     background: transparent;
     margin-left: 16px;
     transition: border-color 0.3s;
@@ -115,3 +115,4 @@
     border-radius: 8px;
     height: 440px;
 }
+
