--- a/frontend/src/pages/Profile/styles.css
+++ b/frontend/src/pages/Profile/styles.css
@@ -14,7 +14,8 @@
 }
 
 .profile-container header img{
-    height: 64px;
+    height: 70px;
+    border-radius: 4px;
 }
 
 .profile-container header span{
