--- a/frontend/src/pages/Detalhes/styles.css
+++ b/frontend/src/pages/Detalhes/styles.css
@@ -111,7 +111,7 @@
     
 } 
 
-.detalhes-container ul li a{
+/*.detalhes-container ul li a{
     background:#fafafd ;
     width: 30%;
     height: 50px;
@@ -121,7 +121,7 @@
     padding:10px;
     margin-bottom: 8px;
     text-align: center;
-}
+}*/
 
 
 
@@ -130,11 +130,11 @@
     margin-bottom: 10px;
 }
 
-.unirInputs button{
+/*.unirInputs button{
     border-radius:8px ;
     margin-top: 8px;
     margin-right: 8px;
-}
+}*/
 
 
 
@@ -146,7 +146,7 @@
     margin-bottom: 8px;
 }
 
-.button1{
+/*.button1{
    
     background: #f3eff3;
     border: 0;
@@ -161,7 +161,7 @@
     transition: filter 0.2s;
  
     
-}
+}*/
 
 .cliente {
     margin-top: 10px;
