--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -14,6 +14,11 @@ body{
     -webkit-font-smoothing: antialiased;
 }
 
+fieldset{
+    padding: 4px;
+    border-radius: 4px;
+}
+
 input,button,textarea{
     font:400 16px Calibri, sans-serif;
 
