--- a/frontend/src/pages/Consultas/styles.css
+++ b/frontend/src/pages/Consultas/styles.css
@@ -57,18 +57,27 @@
 }
 
 
+
+
+
 .novo-caso-container .content ul{
     display: grid;
-    grid-gap:5px;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap:24px;
     list-style:none;
 
 }
-
-.novo-caso-container .content ul li {
+.novo-caso-container  .content ul li {
     background: #FFF;
-    padding: 10px;
+    padding: 24px;
     border-radius: 8px;
     position: relative;
-
 }
-
+.novo-caso-container .content fieldset button{ 
+   
+    border-radius: 8px;
+    border: 1px solid transparent;
+    background: transparent;
+   
+    transition: border-color 0.08s;
+}
